--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,125 +1,123 @@
 .home_footer {
-	position: relative;
-	overflow: hidden;
+  position: relative;
+  overflow: hidden;
 }
 
 .home_footer_one {
-	display: flex;
-	flex-direction: row;
-	background-color: #FFF8E1;
-	padding: 2% 4%;
-	align-items: center;
-	justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  background-color: #fff8e1;
+  padding: 2% 4%;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.home_footer_one>img {
-	transform: translateX(-24%);
+.home_footer_one > img {
+  transform: translateX(-24%);
 }
 
 .home_footer_links {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	z-index: 10;
-	gap: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  z-index: 10;
+  gap: 10px;
 }
 
-
-.home_footer_links>a {
-	display: grid;
-	place-items: center;
-	color: var(--eerie-black);
-	border: 2px solid var(--eerie-black);
-	border-radius: 100%;
-	width: 50px;
-	aspect-ratio: 1;
-	cursor: pointer;
-	transition: all 0.2s ease-in-out;
+.home_footer_links > a {
+  display: grid;
+  place-items: center;
+  color: var(--eerie-black);
+  border: 2px solid var(--eerie-black);
+  border-radius: 100%;
+  width: 50px;
+  aspect-ratio: 1;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
 }
 
-.home_footer_links>a:hover {
-	background-color: var(--eerie-black);
-	color: var(--cream);
+.home_footer_links > a:hover {
+  background-color: var(--eerie-black);
+  color: var(--cream);
 }
 
-.home_footer_links>.FilledButton {
-	margin-left: 20px;
+.home_footer_links > .FilledButton {
+  margin-left: 20px;
 }
 
 .home_footer_two {
-	background-color: var(--eerie-black);
-	color: white;
-	padding: 4%;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	overflow: hidden;
+  background-color: var(--eerie-black);
+  color: white;
+  padding: 4%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  overflow: hidden;
 }
 
 .home_footer_two_left div {
-	font-size: 15px;
+  font-size: 15px;
 }
 
 .home_footer_two_right {
-	display: flex;
-	flex-direction: row;
-	line-height: 33px;
+  display: flex;
+  flex-direction: row;
+  line-height: 33px;
 }
 
 .home_footer_two_right div p {
-	font-size: 15px;
+  font-size: 15px;
 }
 
 .home_footer_two_right div a {
-	color: azure;
+  color: azure;
 }
 
-
 .home_footer_img {
-	opacity: 10%;
-	position: absolute;
-	width: 100%;
-	z-index: 2;
-	bottom: 0%;
-	height: 100%;
+  opacity: 10%;
+  position: absolute;
+  width: 100%;
+  z-index: 2;
+  bottom: 0%;
+  height: 100%;
 }
 
 .home_footer_image img {
-	width: 100%;
+  width: 100%;
 }
 
 .home_footer_image {
-	background-color: var(--eerie-black);
+  background-color: var(--eerie-black);
 }
 
-.home_footer_img>img {
-	width: 100%;
-	height: 100%;
+.home_footer_img > img {
+  width: 100%;
+  height: 100%;
 }
 
 @media (max-width: 720px) {
-	.home_footer_one {
-		padding: 1em;
-		gap: 1em;
-		justify-content: center;
-		align-items: center;
-		flex-direction: column;
-	}
+  .home_footer_one {
+    padding: 1em;
+    gap: 1em;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
 
-	.home_footer_one_img {
-		display: grid;
-		place-items: center;
-		width: 100%;
-	}
+  .home_footer_one_img {
+    display: grid;
+    place-items: center;
+    width: 100%;
+  }
 
-	.home_footer_links {
-		justify-content: center;
-		width: 100%;
-	}
+  .home_footer_links {
+    justify-content: center;
+    width: 100%;
+  }
 }
 
 @media (max-width: 480px) {
-	.home_footer_links>.FilledButton {
-		display: none;
-	}
+  .home_footer_links > .FilledButton {
+    display: none;
+  }
 }
