--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,166 +1,167 @@
 .nav {
-	position: fixed;
-	z-index: 99;
-	top: 0;
+  position: fixed;
+  z-index: 99;
+  top: 0;
 }
 
 #navbar-joinus {
-	padding: 10px 20px;
-	font-size: min(90%, 20px);
-	font-weight: 400;
+  padding: 10px 20px;
+  font-size: min(90%, 20px);
+  font-weight: 400;
 }
 
 .navBar {
-	position: relative;
-	background-color: var(--eerie-black);
-	padding: 20px 40px;
-	display: flex;
-	max-width: 100vw;
-	width: 100vw;
-	justify-content: space-between;
-	align-items: center;
+  position: relative;
+  background-color: var(--eerie-black);
+  padding: 20px 40px;
+  display: flex;
+  max-width: 100vw;
+  width: 100vw;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .navBar > .navLinks {
-	list-style: none;
-	display: flex;
-	justify-content: flex-end;
-	align-items: center;
-	gap: 40px;
-	padding-right: 20px;
+  list-style: none;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 40px;
+  padding-right: 20px;
 }
 
 .navBar > .navLinks li > a {
-	text-decoration: none;
-	color: var(--light-sky);
+  text-decoration: none;
+  color: var(--light-sky);
 }
 
 .menu * {
-	display: block !important;
+  display: block !important;
 }
 
 .menu {
-	position: fixed;
-	right: 0;
-	z-index: 10;
-	display: flex;
-	flex-direction: column;
-	justify-content: center !important;
-	z-index: 999;
-	width: 200px;
-	min-height: 100vh;
-	background-color: var(--eerie-black);
-	padding: 0 0px;
-	border-left: 30px solid var(--lego-yellow);
-	animation: openNav 0.2s;
-	top: 0;
+  position: fixed;
+  right: 0;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  justify-content: center !important;
+  z-index: 999;
+  width: 200px;
+  min-height: 100vh;
+  background-color: var(--eerie-black);
+  padding: 0 0px;
+  border-left: 30px solid var(--lego-yellow);
+  animation: openNav 0.2s;
+  top: 0;
 }
 
 .navLinks {
-	display: none !important;
+  display: none !important;
 }
 
 .active {
-	display: flex !important;
+  display: flex !important;
 }
 
 .navLinks * {
-	display: none;
+  display: none;
 }
 
 .navBar_logoContainer,
 .navBar_toggleContainer,
 .hamburger_container {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 .navBar_logoContainer {
-	justify-content: flex-start;
+  justify-content: flex-start;
 }
 
 .hamburger_container {
-	justify-content: flex-end;
+  justify-content: flex-end;
 }
 
 .navLinks {
-	min-width: max-content;
+  min-width: max-content;
 }
 
 .navLinks li {
-	position: relative;
+  position: relative;
 }
 
 .navLinks li > a:hover {
-	color: var(--cream) !important;
+  color: var(--cream) !important;
 }
 
 .navLinks li:hover {
-	color: var(--cream) !important;
+  color: var(--cream) !important;
 }
 
-.navBar > .navLinks li, .navBar > .navLinks > .FilledButton {
-	cursor: pointer;
-	font-weight: 400;
-	font-size: min(90%, 20px);
-	line-height: 36px;
-	/* identical to box height */
-	color: #ffffff;
+.navBar > .navLinks li,
+.navBar > .navLinks > .FilledButton {
+  cursor: pointer;
+  font-weight: 400;
+  font-size: min(90%, 20px);
+  line-height: 36px;
+  /* identical to box height */
+  color: #ffffff;
 }
 
 .hamburger_container {
-	width: 100%;
+  width: 100%;
 }
 
 .hamburgerMenu {
-	width: 32px;
+  width: 32px;
 }
 
 @keyframes openNav {
-	0% {
-		right: -200px;
-	}
-	100% {
-		right: 0;
-	}
+  0% {
+    right: -200px;
+  }
+  100% {
+    right: 0;
+  }
 }
 
 @media screen and (min-width: 1024px) {
-	.nav {
-		width: 100%;
-		display: flex;
-	}
-	.navBar {
-		display: flex;
-		justify-content: space-between;
-		width: 100%;
-	}
-	.navBar_toggle {
-		margin-left: 30px;
-	}
-	.navBar > .navLinks {
-		display: flex !important;
-	}
-	.navLinks * {
-		display: block;
-	}
+  .nav {
+    width: 100%;
+    display: flex;
+  }
+  .navBar {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+  .navBar_toggle {
+    margin-left: 30px;
+  }
+  .navBar > .navLinks {
+    display: flex !important;
+  }
+  .navLinks * {
+    display: block;
+  }
 
-	.hamburger_container {
-		display: none;
-	}
+  .hamburger_container {
+    display: none;
+  }
 
-	.hamburgerMenu {
-		display: none;
-	}
+  .hamburgerMenu {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 480px) {
-	.navBar_SunMoon {
-		width: 200px;
-		height: 250px;
-	}
+  .navBar_SunMoon {
+    width: 200px;
+    height: 250px;
+  }
 }
 
 /* .navBar_links {
@@ -178,95 +179,95 @@
 } */
 
 .navBar_toggle {
-	position: relative;
-	display: flex;
-	background-color: var(--light-sky);
-	border: 1px solid var(--eerie-black);
-	align-items: center;
-	width: 60px;
-	height: 25px;
-	padding: 5px;
-	border-radius: 20px;
-	justify-content: space-between;
-	cursor: pointer;
-	transition: background-color 0.5s ease;
+  position: relative;
+  display: flex;
+  background-color: var(--light-sky);
+  border: 1px solid var(--eerie-black);
+  align-items: center;
+  width: 60px;
+  height: 25px;
+  padding: 5px;
+  border-radius: 20px;
+  justify-content: space-between;
+  cursor: pointer;
+  transition: background-color 0.5s ease;
 }
 
 .navBar_toggleButton {
-	transition: left 0.5s ease;
-	position: absolute;
-	width: 17px;
-	height: 17px;
-	background-color: var(--light-sky);
-	border: 1px solid var(--eerie-black);
-	border-radius: 100%;
-	top: 50%;
-	transform: translateY(-50%);
+  transition: left 0.5s ease;
+  position: absolute;
+  width: 17px;
+  height: 17px;
+  background-color: var(--light-sky);
+  border: 1px solid var(--eerie-black);
+  border-radius: 100%;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .navBar_marquee {
-	background-color: var(--cream);
-	height: 30px;
-	z-index: 10;
-	border: 2px solid var(--eerie-black);
+  background-color: var(--cream);
+  height: 30px;
+  z-index: 10;
+  border: 2px solid var(--eerie-black);
 }
 
 .navBar_circle {
-	position: relative;
-	width: 10px;
-	height: 10px;
-	background-color: black;
-	border-radius: 100%;
+  position: relative;
+  width: 10px;
+  height: 10px;
+  background-color: black;
+  border-radius: 100%;
 }
 
 .marquee_val {
-	display: flex;
-	align-items: center;
-	justify-content: space-around;
-	gap: 20px;
-	margin-right: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 20px;
+  margin-right: 20px;
 }
 
 .navBar_button {
-	border: none;
-	border-radius: 20px;
-	padding: 10px 10px;
-	background-color: var(--light-sky);
-	color: var(--eerie-black);
-	cursor: pointer;
+  border: none;
+  border-radius: 20px;
+  padding: 10px 10px;
+  background-color: var(--light-sky);
+  color: var(--eerie-black);
+  cursor: pointer;
 }
 
 .navBar_SunMoon {
-	position: absolute;
-	left: 50%;
-	transform: translateX(-50%);
-	top: 0px;
-	z-index: -1;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 0px;
+  z-index: -1;
 }
 
 .team .navBar_SunMoon {
-	display: none;
+  display: none;
 }
 
 .creator .navBar_SunMoon {
-	display: none;
+  display: none;
 }
 
 .backgroundOverlay {
-	position: fixed;
-	display: block;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	width: 100vw;
-	height: 100vh;
-	/* background-color: var(--blasphemous-black); */
-	z-index: 996;
+  position: fixed;
+  display: block;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100vw;
+  height: 100vh;
+  /* background-color: var(--blasphemous-black); */
+  z-index: 996;
 }
 
 .backgroundOverlayClosed {
-	display: none;
-	width: 0%;
-	height: 0%;
+  display: none;
+  width: 0%;
+  height: 0%;
 }
