--- a/src/pages/admin/admin.css
+++ b/src/pages/admin/admin.css
@@ -4,3 +4,24 @@
   justify-content: center;
   margin-top: 20px;
 }
+.button {
+  background-color: #000000;
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  border-radius: 12px;
+  text-align: center;
+}
+input[type="text"] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 2px solid rgb(0, 0, 0);
+  border-radius: 12px;
+}
