--- a/src/pages/admin/admin.css
+++ b/src/pages/admin/admin.css
@@ -3,7 +3,9 @@
   display: flex;
   justify-content: center;
   margin-top: 20px;
+  padding: 25%;
 }
+
 .button {
   background-color: #000000;
   border: none;
@@ -16,12 +18,4 @@
   margin: 4px 2px;
   border-radius: 12px;
   text-align: center;
-}
-input[type="text"] {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  box-sizing: border-box;
-  border: 2px solid rgb(0, 0, 0);
-  border-radius: 12px;
 }
