--- a/src/pages/admin/dashboard/dashboard.css
+++ b/src/pages/admin/dashboard/dashboard.css
@@ -50,3 +50,17 @@
   max-width: 500px;
   margin-top: 10px;
 }
+
+.action-button {
+  padding: 8px 16px;
+  margin-right: 8px;
+  background-color: #101010;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.action-button:hover {
+  background-color: #3e3e3e;
+}
